# ai_automatic_grader_tool

./: .gitignore  README.md  env.example  package-lock.json  pyproject.toml
.agt_venv/: pyvenv.cfg
.github/workflows/: deploy.yml
AGT_platform/: docker-compose.gpu.prod.yaml  docker-compose.prod.yaml  docker-compose.web.prod.yaml  docker-compose.yaml  env.production.gpu.example
AGT_platform/backend/: ReadMe  ReadMe.md  requirements-huggingface.txt  requirements.txt
AGT_platform/backend/alembic/: env.py
AGT_platform/backend/alembic/versions/: a9b8c7d6e5f4_add_standalone_grading_instructions.py  b2c8d4e1f3a0_add_standalone_autograder_tables.py  d4e5f6a7b8c9_submission_direct_upload_lifecycle.py  e2f3a4b5c6d7_add_course_description_assignment_due_date.py  f1a2b3c4d5e6_add_refresh_tokens_table.py  (+1 more)
AGT_platform/backend/app/: audit.py  auth.py  config.py  extensions.py  main.py  models.py  routes_assignments.py  storage.py  tasks.py
AGT_platform/backend/tests/: __init__.py  test_grading_pipeline_local_files.py  test_llm_json_parse.py  test_multimodal_pipeline.py  test_output_schema.py  test_pdf_journal_chunking.py  test_rubric_credit_calibration.py  test_semantic_entropy.py  test_staged_grading_pipeline.py
AGT_platform/frontend/: ReadMe  _redirects  index.html  package-lock.json  package.json  vite.config.ts
AGT_platform/frontend/src/: api.tsx  auth.ts  main.tsx  routes.tsx  theme.ts  vite-env.d.ts
ai-agt/: docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  tailwind.config.ts
ai-agt/src/app/: layout.tsx
ai-agt/src/drizzle/: db.ts  schema.ts
ai-agt/src/permissions/: general.ts
ai-agt/src/services/: clerk.ts
(+93 files in other folders)
