[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment-parser"
version = "0.1.0"
description = "Modality-agnostic assignment parser: extract, segment, classify, render."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AGT" }]
dependencies = [
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
]

[project.scripts]
assignment-parser = "assignment_parser.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["assignment_parser", "rubric_factory"]

[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = true
