[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-automatic-grader-tool"
version = "0.1.0"
description = "Monorepo: AGT_platform backend (Flask API, Celery, multimodal grading)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AGT" }]

[tool.setuptools.packages.find]
where = ["AGT_platform/backend"]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["AGT_platform/backend"]
testpaths = ["AGT_platform/backend/tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
mypy_path = "AGT_platform/backend"
packages = ["app"]
